@@ -62,6 +62,7 @@ import org.opensearch.snapshots.SnapshotId;
 import org.opensearch.snapshots.SnapshotInfo;
 import org.opensearch.threadpool.Scheduler;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
@@ -393,8 +394,10 @@ class S3Repository extends MeteredBlobStoreRepository {
 
     @Override
     public List<Setting<?>> restrictedSystemRepositorySettings() {
+        List<Setting<?>> settings = new ArrayList<>();
         List<Setting<?>> restrictedSystemRepositorySettings = super.restrictedSystemRepositorySettings();
-        restrictedSystemRepositorySettings.addAll(Arrays.asList(BUCKET_SETTING, BASE_PATH_SETTING));
+        settings.addAll(restrictedSystemRepositorySettings);
+        settings.addAll(new ArrayList<>(List.of(BUCKET_SETTING, BASE_PATH_SETTING)));
         return Collections.unmodifiableList(restrictedSystemRepositorySettings);
     }
 
